# RustWeb

bulen-api/: Cargo.toml
bulen-api/mydatabase.db/: IDENTITY  LOG
bulen-api/src/: db.rs  main.rs
bulen-api/src/utils/: dates.rs  mod.rs
bulen-web/: Cargo.toml  index.html
bulen-web/src/: api.rs  main.rs  models.rs  state.rs
bulen-web/src/utils/: macros.rs
mydatabase.db/: 000021.sst  IDENTITY  LOG  LOG.old.1689169531823288  LOG.old.1689230503818927  LOG.old.1689230540487167  MANIFEST-000018
