[package]
name = "bulen-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1.29.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6.2" }
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.8"
thiserror = "1.0"